# planning

./: .gitignore  domain.pddl  notes.txt  problem.pddl  sas_plan
Problem1/: commands  domain.pddl  problem.pddl  problem_1.pddl  problem_2.pddl  problem_3.pddl  problem_4.pddl  sas_plan
Problem1/logs/: times.txt
Problem1/plans/: plan_astar_blind_2  plan_astar_cea_2  plan_astar_cg_2  plan_astar_ff_2  plan_astar_ipdb_2  plan_eager_greddy_add_4  plan_eager_greddy_cg_2  plan_eager_greddy_cg_3  plan_eager_greddy_cg_4  plan_eager_greddy_ff+lmcut_3  plan_eager_greddy_ff+lmcut_4  plan_eager_greddy_ff_2  plan_eager_greddy_ff_3  plan_eager_greddy_ff_4  plan_eager_greddy_ipdb_2  plan_eager_greddy_ipdb_3  plan_lama_3.1  plan_lama_3.2  plan_lama_3.3  plan_lama_4.1  plan_lama_4.2  plan_lama_4.3  plan_lazy_greddy_add_2  plan_lazy_greddy_add_4  plan_lazy_greddy_cea_4  plan_lazy_greddy_cg_2  plan_lazy_greddy_cg_4  plan_lazy_greddy_ff+lmcut_3  plan_lazy_greddy_ff+lmcut_4  plan_lazy_greddy_ff_4  plan_lazy_greddy_ipdb_1  plan_lazy_greddy_ipdb_3  plan_lazy_greddy_ipdb_4  plan_lazy_greddy_lmcut_2
Problem2/: commands  domain.pddl  domain_fluents.pddl  problem.pddl  problem_1.pddl  problem_2.pddl  sas_plan
Problem2/logs/: times.txt
Problem2/plans/: plan_astar_add_1  plan_astar_add_2  plan_astar_cg_2  plan_astar_ff_1  plan_astar_ipdb_1  plan_astar_lmcut_1  plan_eager_greddy_add_1  plan_eager_greddy_add_2  plan_eager_greddy_cea_1  plan_eager_greddy_cea_2  plan_eager_greddy_cg_1  plan_eager_greddy_cg_2  plan_eager_greddy_ff_1  plan_eager_greddy_ff_2  plan_eager_greddy_ipdb_2  plan_eager_greddy_lmcut_1  plan_eager_greddy_lmcut_2  plan_lama_1.1  plan_lama_1.2  plan_lama_1.3  plan_lama_1.4  plan_lama_1.5  plan_lama_2.2  plan_lama_2.3  plan_lama_2.4  plan_lazy_greddy_add_1  plan_lazy_greddy_add_2  plan_lazy_greddy_cea_1  plan_lazy_greddy_cea_2  plan_lazy_greddy_cg_1  plan_lazy_greddy_cg_2  plan_lazy_greddy_ff_1  plan_lazy_greddy_ff_2  plan_lazy_greddy_ipdb_2  plan_lazy_greddy_lmcut_1  plan_lazy_greddy_lmcut_2
Problem3/: commands  domain.hddl  problem.hddl  test.hddl
Problem3/problems/: problem_1_1.hddl  problem_1_2.hddl  problem_1_3.hddl  problem_1_4.hddl  problem_1_5.hddl  problem_1_6.hddl  problem_1_7.hddl  problem_1_8.hddl  problem_1_9.hddl  problem_2_1.hddl  problem_2_2.hddl  problem_2_3.hddl  problem_2_4.hddl  problem_2_5.hddl  problem_2_6.hddl  problem_2_7.hddl  problem_2_8.hddl  problem_2_9.hddl  problem_3_1.hddl  problem_3_2.hddl  problem_3_3.hddl  problem_3_4.hddl  problem_3_5.hddl  problem_3_6.hddl  problem_3_7.hddl  problem_3_8.hddl  problem_3_9.hddl  problem_4_1.hddl  problem_4_2.hddl  problem_4_3.hddl  problem_4_4.hddl  problem_4_5.hddl  problem_4_6.hddl  problem_4_7.hddl  problem_4_8.hddl  problem_4_9.hddl
Problem4/: commands  domain.pddl  problem.pddl  problem_1.pddl  problem_2.pddl  problem_3.pddl
Problem4/Problem2 with fluents/: domain.pddl  problem.pddl
Problem5/: Dockerfile-humble
Problem5/package/: CMakeLists.txt  README  package.xml  setup_problem5
Problem5/package/launch/: commands  problem5_launch.py  problem_1  problem_2  problem_3
Problem5/package/pddl/: problem.pddl
Problem5/package/src/: CMakeLists.txt  move_flying_action_node.cpp  move_jumping_action_node.cpp  move_walking_action_node.cpp  pick_up_content_action_node.cpp  pick_up_content_at_cw_action_node.cpp  put_down_content_action_node.cpp  put_down_content_at_cw_action_node.cpp  robot_attach_carrier_action_node.cpp  robot_detach_carrier_action_node.cpp  robot_load_box_action_node.cpp  robot_unload_box_action_node.cpp
Problem5/package/src/launch/: commands  problem5_launch.py
Problem5/package/src/pddl/: domain.pddl
Problem5/package/src/src/: move_flying_action_node.cpp  move_walking_action_node.cpp  pick_up_content_at_cw_action_node.cpp  put_down_content_action_node.cpp  put_down_content_at_cw_action_node.cpp  robot_attach_carrier_action_node.cpp
Problem5/src/: CMakeLists.txt  package.xml
Problem5/src/launch/: plansys2_template_launch.py
Problem5/src/src/: template_action_node.cpp
